force-app/main/default/objects/FEC_Batch_Case_Handling__c/FEC_Batch_Case_Handling__c.object-meta.xml
<CustomObject>
    <label>Batch Case Handling</label>
    <nameField>
        <label>Batch Case Handling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Case Handling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>