force-app/main/default/objects/FEC_Batch_Case_Handling__c/fields/FEC_File_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>