force-app/main/default/objects/FEC_Batch_Case_Handling__c/fields/FEC_Result__c.field-meta.xml
<CustomField>
    <fullName>FEC_Result__c</fullName>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>