force-app/main/default/objects/FEC_Batch_Case_Handling__c/fields/FEC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Status</valueSetName>
    </valueSet>
</CustomField>