force-app/main/default/objects/FEC_Batch_Case_Handling__c/fields/FEC_Total_Records__c.field-meta.xml
<CustomField>
    <fullName>FEC_Total_Records__c</fullName>
    <label>Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>