force-app/main/default/objects/FEC_Batch_Case_Handling__c/fields/FEC_Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>FEC_Uploaded_By__c</fullName>
    <label>Uploaded By</label>
    <type>Email</type>
</CustomField>